# luse-data-fetcher

./: .gitignore  .taks.yml  README.md  luse_financial_data_dump.ipynb  pyproject.toml  requirements.txt  script.py  setup.py
.github/workflows/: python-package.yml
lisa/: __init__.py  models.py  scrape.py
luseFinReportDownloader/: download.py  extract.py  persist.py
src/: automate.py  download.py  read_data.py
src/luseFinReportDownloader/: download.py
tests/: test_download.py  test_extractor.py
