[build-system]
requires = ["setuptools>=61.0", "tabula-py>=2.7.0", "pandas>=2.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "luse_data_fetcher"
version = "0.0.1"
authors = [
  { name="Suwilanji Jack Chipofya", email="suwilanjichipofya@outlook.com" },
]
description = "luseFinReportDownloader is a powerful Python package designed to streamline the process of fetching financial reports from the Lusaka Stock Exchange. With a simple and intuitive interface, this package automates the download of financial reports and offers seamless conversion to popular formats like CSV, JSON, and Pickle. Moreover, it provides direct integration with databases, allowing you to effortlessly store the data for further analysis. Whether you're an investor, analyst, or researcher, luseFinReportDownloader simplifies the task of gathering and organizing financial data, enabling you to make informed decisions with ease."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: FPL-1.3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/suwilanji-chipofya-hadat/luse-data-fetcher"
"Bug Tracker" = "https://github.com/suwilanji-chipofya-hadat/luse-data-fetcher/issues"
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["luseFinReportDownloader"]
